       NEW: Set/get audio gain via remote control.
       NEW: Only show bookmarks for active tag groups in the panadapter.
     FIXED: Loading of narrow FM tau setting.
     FIXED: Crash when adding or removing bookmark tags.
     FIXED: Redraw bookmarks immediately after changes.
     FIXED: DX cluster spots fail to expire around midnight.
   REMOVED: Support for GNU Radio 3.7.


   2.15.10: Released April 13, 2023

       NEW: Restore FFT zoom level between sessions.
       NEW: Restore peak detect & peak hold between sessions.
       NEW: "Z" keyboard shortcut sets frequency offset to zero.
     FIXED: Remove empty frame from bottom of I/Q tool window.
     FIXED: Sudden scrolling of file list in I/Q tool window.
     FIXED: Reset zoom slider after right click on panadapter / waterfall.
     FIXED: Aliasing when input rate is higher than 2 Msps.
  IMPROVED: AGC performance.
  IMPROVED: WFM stereo & OIRT performance.
  IMPROVED: I/Q swap performance.
  IMPROVED: Apply amplitude normalization to FFT window functions.


    2.15.9: Released April 9, 2022

       NEW: Qt 6 support.
     FIXED: Slider widgets don't work correctly on MacOS Monterey.


    2.15.8: Released January 25, 2022

     FIXED: Crash when DSP is restarted after a long pause.
     FIXED: Remove usage of deprecated Qt APIs.
     FIXED: Return correct RDS status in remote control.
  IMPROVED: Allow ordinary IP addresses to be used in remote control settings.


    2.15.7: Released January 23, 2022

     FIXED: Errors & warnings in appstream metadata & desktop entry.


    2.15.6: Released January 22, 2022

  IMPROVED: Install icon, desktop entry, and appstream metadata.


    2.15.5: Released January 20, 2022

     FIXED: Use correct categories in desktop entry file.


    2.15.4: Released January 15, 2022

     FIXED: Audio is delayed when FFT size is changed.


    2.15.3: Released January 15, 2022

     FIXED: RDS receiver skips some messages.
     FIXED: Buffer overruns in AFSK1200 decoder.