@@ -8,6 +8,7 @@
      FIXED: Crash when adding or removing bookmark tags.
      FIXED: Redraw bookmarks immediately after changes.
      FIXED: DX cluster spots fail to expire around midnight.
+  IMPROVED: Rendering of frequency control and S-meter on some high-DPI screens.
    REMOVED: Support for GNU Radio 3.7.
 
 
